[package]
name = "masquerade"
version = "0.1.1"
authors = ["Raytwo <raytwost@gmail.com>"]
edition = "2018"

[package.metadata.skyline]
titleid = "01001C400E9D8000"
custom-npdm = "masquerade.npdm"

[lib]
crate-type = ["cdylib"]

[dependencies]
skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }
lazy_static = "1.4.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
